# 8086-emu

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  cpu.cpp  cpu.h  cpuexec.cpp  dump.cpp  dump.h  instructions.h  main.cpp  parser.cpp  test
include/: cpu.h  dump.h  instructions.h  memory.h
src/: .gitignore  CMakeLists.txt  Makefile  build.sh  console.c  cpu.cpp  cpuexec.cpp  dump.cpp  emu  emu8086  gui.c  main.c  main.cpp  parser.cpp
src/include/: console.h  cpu.h  gui.h  instructions.h  memory.h  vgafont.h
